--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3><a href="./public/movie ranking project.html">Movie Ranking project</a></h3>
     <img src="./assets/images/movie ranking project.png" height="200" alt="image of movie ranking project"/>
     <hr/>
-    <h3><a href="./public/birthday invite project.html">Birthday Invite Porject</a></h3>
+    <h3><a href="./public/birthday invite project.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" height="200" alt="image of birthday invite project">
     <h4><a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
